--- a/styles/main.scss
+++ b/styles/main.scss
@@ -44,7 +44,7 @@ img {
         font-family: $titleFont;
         font-weight: 300;
         font-size: 2.5rem;
-        padding: 5%;
+        padding: 4%;
         padding-top: 10%;
         letter-spacing: 2px;
         text-decoration: none;
